SFix small Layout bug that removed the upper corner of the scrollbar

--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -142,7 +142,7 @@
             <a href="documentation#documentation-seed-genes">seed genes</a>
             based on related diseases. In general, CADDIE facilitates the seed
             selection process with a variety of different types of implemented
-            information.
+            information in the <a href="documentation#documentation-explorer">explorer</a>.
           </p>
 
           <a id="documentation-seed-genes"></a>
