Comorbidities to related diseases

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -14,9 +14,9 @@
             repurposing in cancer. A variety of different data resources have
             been implemented for cancer driver gene information as well as
             interaction data for gene-gene interactions and gene-drug
-            interactions. We further integrated background data about the genes
-            like comorbidities and mutation data to improve the algorithms and
-            to facilitate the interpretation of the results.
+            interactions. We further integrated genetical background data like
+            related diseases and mutation data to improve the algorithms and to
+            facilitate the interpretation of the results.
             <br />
             We provide a user friendly graphical interface which allows to
             inspect and to understand the biological context of the predictions.
@@ -32,7 +32,11 @@
             <h2 class="subtitle">General workflow of the platform</h2>
           </div>
           <div class="container has-text-centered width-500">
-            <img src="assets/workflow.png" alt="CADDIE workflow" title="General workflow of CADDIE" />
+            <img
+              src="assets/workflow.png"
+              alt="CADDIE workflow"
+              title="General workflow of CADDIE"
+            />
           </div>
           <ol>
             <li>
@@ -62,10 +66,16 @@
             <h2>Contact Information</h2>
           </div>
           <p>
-            For further questions, suggestions or general feedback, please contact:
+            For further questions, suggestions or general feedback, please
+            contact:
           </p>
           <div>
-            <i class="fa fa-envelope"> </i> Email: <a href="mailto:michael.hartung@uni-hamburg.de" title="michael.hartung@uni-hamburg.de">michael.hartung@uni-hamburg.de</a>
+            <i class="fa fa-envelope"> </i> Email:
+            <a
+              href="mailto:michael.hartung@uni-hamburg.de"
+              title="michael.hartung@uni-hamburg.de"
+              >michael.hartung@uni-hamburg.de</a
+            >
           </div>
           <br />
           <br />
