--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -417,7 +417,7 @@
             The Explorer is the main part of the application. It allows you to
             explore the interactome of your cancer type or cancer driver genes
             of interest. Most importantly, it gives you a variety of information
-            like comorbidities or expression values to help you select seed
+            like related diseases or expression values to help you select seed
             genes for your drug or drug-target search.
           </p>
           <a id="documentation-left-menu"></a>
@@ -454,7 +454,7 @@
             the drug-target or drug search by double-clicking the nodes. A
             single click on a node opens a window at the top of the left menu
             with detailed information about the drug or gene such as
-            comorbidities or the node degree in the complete human drug-gene
+            related diseases or the node degree in the complete human drug-gene
             interaction network.
           </p>
           <div class="container has-text-centered">
