--- a/src/app/python-page/python-page.component.html
+++ b/src/app/python-page/python-page.component.html
@@ -9,17 +9,17 @@
         <div class="content">
           <p>
             CADDIE is also available as a python package. We designed the
-            package to be easy to use so that you can search for drug-targets
-            and drug candidates with just a few lines of code!
+            package to be easy to use, making it possible to search for
+            drug-targets and drug candidates with just a few lines of code!
             <br />
             <br />
-            The programmatic access to CADDIE gives you the possibility, to run
-            a larger number of analysis tasks without having to go through the
-            GUI of the web interface for each of the tasks. This might be of
+            The programmatic access to CADDIE gives you the possibility to run a
+            larger number of analysis tasks without having to go through the GUI
+            of the web interface for each of the tasks. This might be of
             interest if you e.g. want to try out one algorithm with a certain
-            gene set but different parameter combinations. Furthermore, you 
-            can integrate CADDIEs functionality into your programs. For
-            more information, click the button below.
+            gene set but different parameter combinations. Furthermore, you can
+            integrate CADDIEs functionality into your programs. For more
+            information, click the button below.
           </p>
 
           <div class="center">
