--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -142,7 +142,8 @@
             <a href="documentation#documentation-seed-genes">seed genes</a>
             based on related diseases. In general, CADDIE facilitates the seed
             selection process with a variety of different types of implemented
-            information in the <a href="documentation#documentation-explorer">explorer</a>.
+            information in the
+            <a href="documentation#documentation-explorer">explorer</a>.
           </p>
 
           <a id="documentation-seed-genes"></a>
@@ -444,17 +445,18 @@
           <h4 class="title is-5">Gene-Interaction Network</h4>
           <p>
             On the right side of the explorer is the gene-interaction network.
-            It contains all cancer driver genes of your selected cancer type,
-            forming a minimal spanning tree. It is supplemented by genes found
-            by the Multiple Steiner Tree algorithm in order to make the minimal
-            spanning tree possible. The network gives you an overview of the
-            relations of the cancer driver genes to each other and lets you
-            select
+            It contains all cancer driver genes of your selected cancer type(s),
+            forming a minimal spanning tree in the human gene interactome. It is
+            supplemented by genes found by the Multiple Steiner Tree algorithm,
+            which was used to pre-compute the network. Therefore, the network
+            will change when a new interaction dataset is selected. The network
+            gives you an overview of the relations of the cancer driver genes to
+            each other and lets you select
             <a href="documentation#documentation-seed-genes">seed genes</a> for
             the drug-target or drug search by double-clicking the nodes. A
             single click on a node opens a window at the top of the left menu
-            with detailed information about the drug or gene such as
-            related diseases or the node degree in the complete human drug-gene
+            with detailed information about the drug or gene such as related
+            diseases or the node degree in the complete human drug-gene
             interaction network.
           </p>
           <div class="container has-text-centered">
