fix bug that caused site to crash when entering explorer, opening drug search, leaving explorer and entering explorer again + start explorer tutorial component

--- a/src/app/pages/explorer-page/components/explorer-network-information/explorer-network-information.component.html
+++ b/src/app/pages/explorer-page/components/explorer-network-information/explorer-network-information.component.html
@@ -3,7 +3,7 @@
   class="notification-explorer-network notification is-info is-light"
 >
   <button class="delete" (click)="delete_notification($event)"></button>
-  The network shows a minimum spannning tree of the cancer driver genes for the
+  The network shows a minimum spanning tree of the cancer driver genes for the
   selected cancer type(s) in the human interactome. The network was computed
   using the Multi-level Steiner tree algorithm algorithm. <a target="_blank" href="documentation#documentation-network">Learn more</a>
 
