--- a/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
@@ -1,4 +1,4 @@
-<div class="modal" [class.is-active]="show">
+<div class="modal" [class.is-active]="show" *ngIf="explorerData.activeNetwork.selectedInteractionDrugDataset">
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
