fix broken link

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -21,12 +21,7 @@
             We provide a user friendly graphical interface which allows to
             inspect and to understand the biological context of the predictions.
             CADDIE can be used to repurpose drugs as well as to find new drug
-            targets. For more information and examples, please refer to
-            <a
-              href="https://drive.google.com/file/d/1OHJXf8Ui8UIGL6DVNoQlRMAHY5dC_lVS/view?usp=sharing"
-              target="_blank"
-              >our work</a
-            >.
+            targets.
           </p>
           <div class="has-text-centered">
             <h2 class="subtitle">General workflow of the platform</h2>
