--- a/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
@@ -668,7 +668,7 @@
       </div>
 
       <p class="doc-link">
-        <a href="/documentation#documentation-algorithms" target="_blank">
+        <a href="documentation#documentation-algorithms" target="_blank">
           Check the documentation for more information
         </a>
       </p>
