testing divier in data selection

--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -154,7 +154,17 @@
             implemented algorithms search in the interaction network for
             drug-targets or drugs based on their relation the seed genes.
             Therefore, the seed genes are your genes of interest for which
-            putative drugs or drug-target candidates should be found for.
+            putative drugs or drug-target candidates should be found for. 
+            <br>
+            CADDIE offers the possibility to load seed genes directly from the cancer
+            types in the database. A cancer type can be selected in the left
+            side bar and the menu button in the bottom of the network contains
+            the function "Add cancer driver genes", which adds all the cancer
+            genes in the network to the seed nodes. Further it is possible to
+            define seed genes based on the related diseases in the left side bar
+            by clicking on the plot or by uploading a custom list of gene names,
+            uniprot ACs or entrez IDs when by cklicking of "Custom Genes" in the
+            menu or in the selection panel in the left side bar.
           </p>
 
           <a id="documentation-algorithms"></a>
