--- a/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/launch-analysis/launch-analysis.component.html
@@ -660,7 +660,7 @@
         <p class="help">
           Automatically filter edges to make network more clear by only showing shorter pathways.
 
-          <!-- <a href="/documentation#documentation-algorithms" target="_blank">
+          <!-- <a href="documentation#documentation-algorithms" target="_blank">
             Check the documentation for more information
           </a> -->
 
