--- a/src/app/pages/explorer-page/components/sidebar/sidebar.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/sidebar.component.html
@@ -133,6 +133,10 @@
         </app-cancertype-comorbidities-tile>
       </div>
       <!-- Cancer Type Selector END -->
+      <hr>
+      <div>
+
+      </div>
     </div>
   </div>
   <!-- Data Selector END -->
