gene upload button under network, more documentation, fix bug to allow drug interaction network selection in analysis view for new tasks, fix but that caused problems with modals in fullscreen view

--- a/src/app/pages/documentation-page/documentation-page.component.html
+++ b/src/app/pages/documentation-page/documentation-page.component.html
@@ -154,17 +154,20 @@
             implemented algorithms search in the interaction network for
             drug-targets or drugs based on their relation the seed genes.
             Therefore, the seed genes are your genes of interest for which
-            putative drugs or drug-target candidates should be found for. 
-            <br>
-            CADDIE offers the possibility to load seed genes directly from the cancer
-            types in the database. A cancer type can be selected in the left
-            side bar and the menu button in the bottom of the network contains
-            the function "Add cancer driver genes", which adds all the cancer
-            genes in the network to the seed nodes. Further it is possible to
-            define seed genes based on the related diseases in the left side bar
-            by clicking on the plot or by uploading a custom list of gene names,
-            uniprot ACs or entrez IDs when by cklicking of "Custom Genes" in the
-            menu or in the selection panel in the left side bar.
+            putative drugs or drug-target candidates should be found for. The
+            easiest way to select a seed gene is by double-clicking on a node in
+            the network.
+            <br />
+            CADDIE also offers the possibility to load seed genes directly from
+            the cancer types in the database. A cancer type can be selected in
+            the left side bar and the menu button in the bottom of the network
+            contains the function "Add cancer driver genes", which adds all the
+            cancer genes in the network to the seed nodes. Further it is
+            possible to define seed genes based on the related diseases in the
+            left side bar by clicking on the plot or by uploading a custom list
+            of gene names, uniprot ACs or entrez IDs when by cklicking of
+            "Custom Genes" in the menu or in the selection panel in the left
+            side bar.
           </p>
 
           <a id="documentation-algorithms"></a>
@@ -502,17 +505,26 @@
             but here it displays all
             <a href="documentation#documentation-seed-genes">seed genes</a> in
             combination with the found genes and/or drugs and allows you to
-            inspect the relations from the seeds to the results. You can also
-            look at your results in a table format, where additional information
-            to each of the genes or drugs is displayed. Here you can sort the
-            nodes to get a better overview and download the tables for further
-            processing on your side. Furthermore, CADDIE also provides different
-            statistics and graphs about the analysis (depending on your analysis
-            parameters). For example, you can set the calculated score for each
-            of your genes and drugs in comparison to the node degrees in the
-            drug-gene interactome (see below). Ultimately, the selected
-            parameters and versions of the used datasets can be retrieved in the
-            fourth tab.
+            inspect the relations from the seeds to the results.
+          </p>
+          <div class="container has-text-centered">
+            <img
+              src="assets/CADDIE analysis network.png"
+              alt="CADDIE analysis network"
+              title="CADDIE analysis network"
+            />
+          </div>
+          <p>
+            You can also look at your results in a table format, where
+            additional information to each of the genes or drugs is displayed.
+            Here you can sort the nodes to get a better overview and download
+            the tables for further processing on your side. Furthermore, CADDIE
+            also provides different statistics and graphs about the analysis
+            (depending on your analysis parameters). For example, you can set
+            the calculated score for each of your genes and drugs in comparison
+            to the node degrees in the drug-gene interactome (see below).
+            Ultimately, the selected parameters and versions of the used
+            datasets can be retrieved in the fourth tab.
           </p>
           <div class="container has-text-centered">
             <img
