--- a/src/app/pages/explorer-page/components/sidebar/components/info-tile/info-tile.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/components/info-tile/info-tile.component.html
@@ -120,7 +120,7 @@
 
       <ng-container *ngIf="wrapperComorbidities.length">
         <b
-          ><span>Comorbidities ({{ wrapperComorbidities.length }}):</span></b
+          ><span>Related Diseases ({{ wrapperComorbidities.length }}):</span></b
         >
         <ul
           class="content scroll-120"
@@ -202,7 +202,7 @@
 
       <ng-container *ngIf="wrapperComorbidities.length">
         <b
-          ><span>Comorbidities ({{ wrapperComorbidities.length }}):</span></b
+          ><span>Related Diseases ({{ wrapperComorbidities.length }}):</span></b
         >
         <ul
           class="content scroll-120"
