--- a/src/app/pages/explorer-page/components/sidebar/sidebar.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/sidebar.component.html
@@ -133,10 +133,6 @@
         </app-cancertype-comorbidities-tile>
       </div>
       <!-- Cancer Type Selector END -->
-      <hr>
-      <div>
-
-      </div>
     </div>
   </div>
   <!-- Data Selector END -->
@@ -806,9 +802,7 @@
 
 <app-launch-analysis
   [(show)]="explorerData.showAnalysisDialog"
-  [target]="explorerData.analysisDialogTarget"
-  [interactionDrugDatasetItems]="explorerData.interactionDrugDatasetItems"
->
+  [target]="explorerData.analysisDialogTarget">
 </app-launch-analysis>
 
 <app-custom-genes
