--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -5,7 +5,7 @@
       <div [hidden]="explorerData.selectedAnalysisToken">
         <!-- display network information if user has not clicked "don't show again" -->
         <app-explorer-network-information></app-explorer-network-information>
-        <app-network [networkType]="'basic'"></app-network>
+        <app-network [networkType]="'basic'" [target]="'none'"></app-network>
       </div>
       <div class="analysis-view" *ngIf="explorerData.selectedAnalysisToken">
         <app-analysis-panel
