--- a/src/app/pages/explorer-page/components/network/network.component.scss
+++ b/src/app/pages/explorer-page/components/network/network.component.scss
@@ -5,7 +5,7 @@
   top: 0 !important;
   left: 0 !important;
   height: 100vh !important;
-  z-index: 100 !important;
+  z-index: $fullscreen-z-index !important;
   .card.network {
     height: 100%;
   }
@@ -15,6 +15,17 @@
   footer {
     position: absolute;
     bottom: 0;
+  }
+}
+
+.network-footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  bottom: 0;
+  background: white;
+  .footer-buttons {
+    transform: scale(0.9)
   }
 }
 
