--- a/src/app/pages/explorer-page/components/sidebar/components/interaction-dataset-tile/interaction-dataset-tile.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/components/interaction-dataset-tile/interaction-dataset-tile.component.html
@@ -5,7 +5,7 @@
                  placeholder="Select..." [ngModel]="selectedDataset" (ngModelChange)="select($event)"
                  data-tooltip="Select which interactions to use." [clearable]="false">
         <ng-template ng-option-tmp let-item="item">
-          {{item.name}} ({{item.count}})
+          {{item.name}} ({{kFormatter(item.count)}})
         </ng-template>
       </ng-select>
     </div>
