--- a/src/scaffold.scss
+++ b/src/scaffold.scss
@@ -6,6 +6,9 @@ $network-footer-height: 75px;
 $network-header-height: 50px;
 $analysis-result-header-height: 48px;
 
+$fullscreen-z-index: 100;
+$modal-z-index: 110;
+
 $navbar-background-color: #143d1f;//#86D16B;//#D0D8D2;//#F5F0F5;
 
 $network-node-color: #143d1f;
