--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,9 @@ body {
   height: 100%;
 }
 
-
+.modal {
+  z-index: $modal-z-index;
+}
 
 button.is-example {
     background-color: $secondary;
@@ -272,20 +274,6 @@ div.field.has-addons.add-remove-toggle {
 .fa-times {
   color: $danger;
 }
-
-.network-footer-container {
-  display: flex;
-  flex-wrap: wrap;
-  position: absolute;
-  bottom: 0;
-  background: white;
-  .footer-buttons {
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-  }
-}
-
 
 .toolbar {
   padding: 5px;
